src/home_page/result_viewer/code_fragment/CodeFragment.module.css
.parentDiv {
  margin-bottom: 10px;
  padding: 0px 15px;
}

.spanHighlight {
  background-color: rgb(218, 234, 230);
}

.codeLine {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
  margin: 0.5em 0em;
  white-space: pre;
}

.codeLinesDiv {
  outline: black solid 1px;
  border: gray solid 1px;
  border-left: gray solid 15px;
}

.footerDiv {
  margin-top: 3px;
  padding-left: 5px;
}

